# SecuScan

./: PLUGINS.md  pyproject.toml
backend/: requirements-dev.txt
backend/secuscan/: cli.py  executor.py  reporting.py  routes.py  validation.py
frontend/: package-lock.json  package.json
plugins/amass/: metadata.json
plugins/api_scanner/: metadata.json
plugins/cloud_scanner/: metadata.json
plugins/cloud_storage_auditor/: metadata.json
plugins/code_analyzer/: metadata.json
plugins/container_scanner/: metadata.json
plugins/crawler/: metadata.json
plugins/dir_discovery/: metadata.json
plugins/dns_enum/: metadata.json  parser.py
plugins/dnsx/: metadata.json
plugins/domain-finder/: metadata.json
plugins/droopescan/: metadata.json
plugins/fuzzer/: metadata.json
plugins/google-dorking/: metadata.json
plugins/hashcat/: metadata.json
plugins/http_inspector/: metadata.json
plugins/http_request_logger/: metadata.json
plugins/httpx/: metadata.json
plugins/iac_scanner/: metadata.json
plugins/icmp_ping/: metadata.json
plugins/joomscan/: metadata.json
plugins/katana/: metadata.json
plugins/kubernetes_scanner/: metadata.json
plugins/metasploit/: metadata.json
plugins/network_scanner/: metadata.json
plugins/nikto/: metadata.json
plugins/nmap/: metadata.json
plugins/nuclei/: metadata.json
plugins/password_auditor/: metadata.json
plugins/people-email-discovery/: metadata.json
plugins/port-scanner/: metadata.json
plugins/scapy_recon/: metadata.json
plugins/secret_scanner/: metadata.json
scripts/: refresh_plugin_checksum.py
(+48 files in other folders)
