[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["F601", "F821", "E722"]

[project]
name = "secuscan"
version = "0.1.0"
description = "Local-First Pentesting Toolkit"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.6.0",
    "psycopg[binary]>=3.3.0",
    "redis>=5.2.1",
    "sse-starlette>=2.1.0",
    "python-multipart>=0.0.9",
    "xhtml2pdf>=0.2.17",
    "aiosqlite>=0.20.0",
    "python-whois>=0.9.4"
]

[project.scripts]
secuscan = "backend.secuscan.cli:main"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
